# EvServer

./: INSTALL  INSTALL.jp  Makefile.am  README.md  configure.ac  evs_api.c  evs_cbfunc.c  evs_close.c  evs_config.c  evs_init.c  evs_main.c  evs_main.h  evserver.ini
Ver0.0.x/: LICENSE  Makefile.am  README.md  configure.ac  evs_cbfunc.c  evs_close.c  evs_main.h  evserver.ini
